complete_project/local/logs/project.log
2018-04-16T01:14:23.280Z - normal: Load ~/.CocosCreator/settings.json
2018-04-16T01:14:23.284Z - normal: checking language setting...
2018-04-16T01:14:23.284Z - normal: Language: zh
2018-04-16T01:14:25.104Z - success: protocol editor-framework registered
2018-04-16T01:14:25.104Z - success: protocol app registered
2018-04-16T01:14:25.104Z - success: protocol theme registered
2018-04-16T01:14:25.104Z - success: protocol packages registered
2018-04-16T01:14:25.104Z - success: protocol unpack registerred
2018-04-16T01:14:25.104Z - success: protocol disable-commonjs registerred
2018-04-16T01:14:25.367Z - normal: connected!
2018-04-16T01:14:25.372Z - normal: Check project D:\github\mycocosgame\complete_project
2018-04-16T01:14:25.379Z - normal: Initializing Cocos2d
2018-04-16T01:14:25.589Z - normal: Initializing Asset Database
2018-04-16T01:14:25.625Z - success: protocol uuid registerred
2018-04-16T01:14:25.626Z - success: protocol db registerred
2018-04-16T01:14:25.626Z - success: protocol thumbnail registerred
2018-04-16T01:14:25.626Z - normal: Loading editor/builtin packages
2018-04-16T01:14:25.647Z - success: anysdk loaded
2018-04-16T01:14:25.779Z - success: assets loaded
2018-04-16T01:14:25.781Z - success: builder loaded
2018-04-16T01:14:25.784Z - success: cocos-analytics loaded
2018-04-16T01:14:25.786Z - success: console loaded
2018-04-16T01:14:25.789Z - success: hierarchy loaded
2018-04-16T01:14:25.792Z - success: inspector loaded
2018-04-16T01:14:25.793Z - success: keystore loaded
2018-04-16T01:14:25.795Z - success: node-library loaded
2018-04-16T01:14:25.797Z - success: package-asset loaded
2018-04-16T01:14:25.798Z - success: preferences loaded
2018-04-16T01:14:25.800Z - success: project-exporter loaded
2018-04-16T01:14:25.815Z - success: project-importer loaded
2018-04-16T01:14:25.816Z - success: project-settings loaded
2018-04-16T01:14:25.818Z - success: ui-kit loaded
2018-04-16T01:14:25.821Z - success: ui-grid loaded
2018-04-16T01:14:25.825Z - success: scene loaded
2018-04-16T01:14:25.826Z - success: sprite-editor loaded
2018-04-16T01:14:25.830Z - success: store loaded
2018-04-16T01:14:25.836Z - success: timeline loaded
2018-04-16T01:14:25.836Z - normal: Loading builtin packages
2018-04-16T01:14:25.839Z - success: asset-db-debugger loaded
2018-04-16T01:14:25.840Z - success: code-editor loaded
2018-04-16T01:14:25.841Z - success: color-picker loaded
2018-04-16T01:14:25.842Z - success: package-manager loaded
2018-04-16T01:14:25.846Z - success: sdkbox loaded
2018-04-16T01:14:25.850Z - success: tester loaded
2018-04-16T01:14:25.851Z - success: ui-kit-preview-extra loaded
2018-04-16T01:14:25.854Z - success: ui-kit-preview loaded
2018-04-16T01:14:25.856Z - success: ui-tree loaded
2018-04-16T01:14:27.436Z - normal: Initializing project D:\github\mycocosgame\complete_project
2018-04-16T01:14:27.461Z - normal: Loading packages
2018-04-16T01:14:27.466Z - normal: Watching packages
2018-04-16T01:14:27.496Z - normal: Run Application
2018-04-16T01:14:28.746Z - success: preview server running at http://localhost:7456
2018-04-16T01:14:34.363Z - normal: 1.8.1
2018-04-16T01:19:46.848Z - failed: [db-task][sync-changes] Failed to import asset D:\github\mycocosgame\complete_project\assets\scripts\Game.js, message: Compile error: SyntaxError: D:/github/mycocosgame/complete_project/assets/scripts/Game.js: Unexpected token, expected ; (61:22)
  59 |         this.spawnNewStar();
  60 | //生成一个火
> 61 | for(i=0,i<fire_num,i++){
     |                       ^
  62 |         this.spawnNewFire();
  63 |     }
  64 |         // 初始化计分
    at Parser.pp$5.raise (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$1.parseFor (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2301:8)
    at Parser.pp$1.parseForStatement (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2048:15)
    at Parser.pp$1.parseStatement (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1836:19)
    at Parser.pp$1.parseBlockBody (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2268:21)
    at Parser.pp$1.parseBlock (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2247:8)
    at Parser.pp$3.parseFunctionBody (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4235:22)
    at Parser.pp$1.parseFunction (D:\software\cocos_creator\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:2386:8)
2018-04-16T01:28:06.240Z - info: shutdown preview server
